--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/facebook"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Scheduler"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/DatePicker"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/fbrest"/>
 	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
